# CFPP

./: .clangd  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CoreFoundation++.sln  README.md
CF++/: Clang-Warnings.h  Info.plist  PrefixHeader.pch
CF++ Example/: main.cpp
CF++ Testing/: main.cpp
CF++ Tests/: ArrayTest.mm  BooleanTest.mm  CFPP-Array.cpp  CFPP-AutoPointer.cpp  CFPP-Boolean.cpp  CFPP-Data.cpp  CFPP-Date.cpp  CFPP-Dictionary.cpp  CFPP-Error.cpp  CFPP-Number.cpp  CFPP-Pair.cpp  CFPP-PropertyListType.cpp  CFPP-ReadStream.cpp  CFPP-String.cpp  CFPP-Type.cpp  CFPP-URL.cpp  CFPP-UUID.cpp  CFPP-WriteStream.cpp  DataTest.mm  DateTest.mm  DictionaryTest.mm  ErrorTest.mm  Info.plist  NumberTest.mm  PairTest.mm  PrefixHeader.pch  PropertyListTypeTest.mm  StringTest.mm  Test-CFPP-AutoPointer.cpp  Test-CFPP-Error.cpp  Test-CFPP-Type.cpp  Test-CFPP-WriteStream.cpp  URLTest.mm  UUIDTest.mm
CoreFoundation++.xcodeproj/: project.pbxproj
Scripts/: travis-after.sh  travis-before.sh  travis-osx-before.sh
Unit-Tests/: CFPP-Dictionary.cpp  CFPP-Number.cpp  CFPP-Pair.cpp  CFPP-Type.cpp  Constants.cpp  Constants.hpp  Test-CFPP-AnyObject.cpp  Test-CFPP-AnyPropertyListType.cpp  Test-CFPP-Array-Iterator.cpp  Test-CFPP-Array.cpp  Test-CFPP-AutoPointer.cpp  Test-CFPP-Boolean.cpp  Test-CFPP-Data-Iterator.cpp  Test-CFPP-Data.cpp  Test-CFPP-Date.cpp  Test-CFPP-Dictionary-Iterator.cpp  Test-CFPP-Dictionary.cpp  Test-CFPP-Error.cpp  Test-CFPP-Null.cpp  Test-CFPP-Number.cpp  Test-CFPP-Object.cpp  Test-CFPP-Pair.cpp  Test-CFPP-PropertyListType.cpp  Test-CFPP-ReadStream.cpp  (+8 more)
(+133 files in other folders)
